[package]
name = "ntripping"
version = "1.6.1"
authors = ["Swift Navigation <dev@swiftnav.com>"]
edition = "2018"
publish = true

[dependencies]
anyhow = "1.0.94"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
curl = "^0.4.44"
flume = { version = "0.11.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[build-dependencies]
vergen = "3"
